--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "http-proxy-middleware": "^3.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.0",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
+    "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
